// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webpack-tests > 1. extracts to a div for simple views, flat transforms 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _grow-1 _shrink-1 _fb-0px _btlr-100px _btrr-100px _bbrr-100px _bblr-100px _bxsh-0px0px10px0946673987 _fd-1449990797 _bc-412250850 _tsx-471442652 _s-1825574291 _tsy-764845659 test1"
    >
      <span
        class="is_Text _c-1800893761"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1504260293 _ox-287577481 _oy-484090986 who"
    />
    <div
      class="is_View _pt-2px _pb-2px _t--14px _fd-1504260293 _bc-2145334416 ease-in-out-top"
    >
      <span
        class="is_Text _c-1800893761"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1504260293 _ox-287577481 _oy-484090986 who"
    />
    <div
      class="is_View _pt-2px _pb-2px _t-0px _fd-1504260293 _bc-2145280794 ease-in-out-top"
    >
      <span
        class="is_Text _c-1800893761"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 5. spread conditional 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-774192370 _ox-287577481 _oy-484090986 _bc-2147217479"
    >
      <div
        class="is_View _fd-774192370 _ox-287577481 _oy-484090986 _bc-2147217479 hello-world"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 6. spread ternary 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-774192370 _ox-287577481 _oy-484090986 _bc-2147217479"
    >
      <span
        class="is_Text _c-1800893761"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 6. spread ternary 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-774192370 _ox-287577481 _oy-484090986 _bc-1453830019"
    >
      <span
        class="is_Text _c-1800893761"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 7. ternary + data-is 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _pr-11px _pl-11px _pb-10px _minW-500px _fd-774192370 _w-50289183 _mw-1851370785"
    >
      <div
        class="is_View _width-10px _height-10px _fd-774192370"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 8. styleExpansions 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _t-0px _r-0px _b-0px _l-0px _fd-1449990797 _p-380269174"
    >
      <div
        class="is_View _fd-1449990797 _bc-412250850"
      >
        <div
          class="is_View _t-0px _r-0px _b-0px _l-0px _fd-1449990797 _p-380269174 _bc-2077217906"
        />
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 9. combines with classname 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _pt-15px _pb-15px _fd-1449990797 home-top-dish"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 10. extracts Text 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <span
      class="is_Text _fs-10px _c-1800893761"
    >
      <span
        class="is_Text _c-1800893761 _us-159010160"
      >
        <span
          class="is_Text _fs-15px _c-1409063571 _fw-1596451603"
        >
          hello
        </span>
      </span>
    </span>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 12. ternary multiple on same key 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _o-1 _tr- _fd-774192370"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 14. extracts pseudo styles and evaluates constants 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fd-1449990797 _bc-1577391619"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 15. extracts spacer (complex expansion) 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <span
      class="is_Spacer is_View _pe-1706787623 _w-1678427328 _h-1353003200 _mw-825105109 _mh-1658445463"
    />
    <span
      class="is_Spacer is_View _grow-1 _shrink-1 _fb-0px _pe-1706787623 _w-352834880 _h-1851048256 _mw-652929099 _mh-972272695"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 16. deopt when spreading multiple 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _grow-1 _shrink-1 _fb-0px _fd-774192370 _bc-1453830019"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 18. extracts flexWrap property 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fw-78847086 _fd-747167322 _rg-786180471 _cg-847098464"
      data-testid="flex-wrap"
    >
      <span
        class="is_Text _c-1800893761"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 19. extracts flexWrap with conditional 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fw-1351756305 _fd-1504260293 _ai-384343521 _jc-1593340391"
      data-testid="flex-wrap-conditional"
    >
      <span
        class="is_Text _c-1800893761"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 19. extracts flexWrap with conditional 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fw-888566608 _fd-1504260293 _ai-384343521 _jc-1593340391"
      data-testid="flex-wrap-conditional"
    >
      <span
        class="is_Text _c-1800893761"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 20. extracts multiple flex properties together 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _grow-1 _shrink-0 _fd-1449990797 _fw-78847086 _fb-656175374 _ai-44927675 _jc-1174485172 _ac-2114407993"
      data-testid="flex-properties"
    >
      <span
        class="is_Text _c-1800893761"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 21. complex real-world case - flexWrap with many conditionals and media queries 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _pt-4px _pb-4px _width-260px _btlr-1346972067 _btrr-475243958 _bbrr-571691947 _bblr-183322527 _fd-774192370 _fb-2053709076 _mw-1529349540 _ox-287577481 _oy-484090986 _pl-1919133912 _pr-1933163734 _bc-1375088303 _c-1980977394"
    >
      <div
        class="is_View _gap-4px _fd-1504260293 _fw-1351756305 _jc-2056567925"
      >
        <span
          class="is_Text _c-1800893761"
        >
          hello world
        </span>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 21. complex real-world case - flexWrap with many conditionals and media queries 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _pt-4px _pb-4px _width-260px _btlr-1346972067 _btrr-475243958 _bbrr-571691947 _bblr-183322527 _fd-774192370 _fb-2055207535 _mw-1529349540 _ox-287577481 _oy-484090986 _pl-1919133912 _pr-1933163734 _bc-1375088303 _c-1980977394"
    >
      <div
        class="is_View _gap-4px _fd-1504260293 _fw-1351756305 _jc-346215703"
      >
        <span
          class="is_Text _c-1800893761"
        >
          hello world
        </span>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 22. flexWrap with media query conditionals 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _fw-243128163 _fd-774192370 _rg-1328534120 _cg-34984289 _pt-88212990 _pr-1115058461 _pb-1531519899 _pl-585968523"
      data-testid="flex-wrap-media"
    >
      <span
        class="is_Text _c-1800893761"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 23. inert animatedBy selector flattens with group styles 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View t_group_animated _fd-1449990797"
      data-testid="animated-group"
    >
      <div
        class="is_View _width-100px _fd-1449990797 _bc-134956633"
        data-testid="animated-group-child"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;
